# poetry-in-a-container

./: Dockerfile.template  LICENSE  Makefile  entrypoint.sh  fetch_releases.py  pyproject.toml
.github/workflows/: main.yml
